force-app/main/default/objects/Potion__mdt/Potion__mdt.object-meta.xml
<CustomObject>
    <description>Dados das poções utilizadas pelo personagem do usuário</description>
    <label>Poção</label>
    <pluralLabel>Poções</pluralLabel>
</CustomObject>