force-app/main/default/objects/Potion__mdt/fields/RestoredStatus__c.field-meta.xml
<CustomField>
    <fullName>RestoredStatus__c</fullName>
    <label>Status restaurado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
                <default>true</default>
                <label>HP</label>
            </value>
            <value>
                <fullName>XP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>