force-app/main/default/objects/Potion__mdt/fields/RestoredValue__c.field-meta.xml
<CustomField>
    <fullName>RestoredValue__c</fullName>
    <description>Valor da porcentagem restaurada do status</description>
    <label>Valor Restaurado</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>